@@ -41,8 +41,10 @@ DATE_FORMAT          = ('preferences','date-format', 1)
 DONT_ASK             = ('interface','dont-ask', 0)
 HEIGHT               = ('interface','height', 1)
 WIDTH                = ('interface','width', 1)
-FAMILY_HEIGHT        = ('interface','family_height', 1)
-FAMILY_WIDTH         = ('interface','family_width', 1)
+FAMILY_HEIGHT        = ('interface','family-height', 1)
+FAMILY_WIDTH         = ('interface','family-width', 1)
+PERSON_HEIGHT        = ('interface','person-height', 1)
+PERSON_WIDTH         = ('interface','person-width', 1)
 FILTER               = ('interface','filter', 0)
 FPREFIX              = ('preferences','fprefix', 2)
 EPREFIX              = ('preferences','eprefix', 2)
@@ -107,6 +109,8 @@ default_value = {
     WIDTH                : 775,
     FAMILY_HEIGHT        : 500,
     FAMILY_WIDTH         : 700,
+    PERSON_HEIGHT        : 550,
+    PERSON_WIDTH         : 750,
     FILTER               : False,
     FPREFIX              : 'F%04d',
     EPREFIX              : 'E%04d',
